# SearchAfterburner

./: README.md  history
service/: README.md  real_ablation.py  real_ablation_results.json  report.md  requirements.txt  results.json  simple_results.json  simple_run.py  terminal_demo.sh  trace.json
service/orchestrator/: embed.py  judge.py  metrics.py  prompts.py  providers.py  report.md  report.py  results.json  run.py  trace.json  utils.py
service/orchestrator/adaptive/: __init__.py  adaptive.py  budget.py  tiering.py
service/orchestrator/cache/: __init__.py  disk.py  manager.py  memory.py  serializer.py
service/orchestrator/cascade/: __init__.py  cascade.py  judges.py  manager.py
service/orchestrator/filtering/: __init__.py  dedup.py  manager.py  prefilter.py
service/orchestrator/guardrails/: __init__.py  guardrails.py  logging.py  validators.py
service/orchestrator/net/: __init__.py  hedging.py  session.py
service/orchestrator/runs/run_1757405788/: trace.json
service/orchestrator/streaming/: __init__.py  pipeline.py  queues.py  workers.py
service/ranker-rs/: Cargo.toml
service/ranker-rs/src/: main.rs  scoring.rs
service/runs/ablation/: ablation_results.json
service/tools/: ablate.py
