[package]
name = "ranker-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
nalgebra = "0.32"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["fmt", "env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
